k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bff-microservice
  template:
    metadata:
      labels:
        app: bff-microservice
    spec:
      containers:
        - name: bff
          image: my-dockerhub-username/bff-microservice:latest
          ports:
            - containerPort: 8000
