k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff-service
spec:
  selector:
    app: bff-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
